<resources>
    <string name="app_name">User Registration App</string>
    <string name="registration_summary">Registration Summary</string>
    <string name="button_text_register">Register</string>
    <string name="hint_password">Password</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_email">Email</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_user_registration">User Registration</string>
    <string name="image_view_text_logo">Logo of the startup company</string>
</resources>